--- a/05-deployment/Pipfile
+++ b/05-deployment/Pipfile
@@ -4,10 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pickle-mixin = "*"
 scikit-learn = "==1.3.1"
+jupyter = "*"
+flask = "*"
+gunicorn = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.10"
+python_full_version = "3.10.13"
