--- a/07-project/Pipfile
+++ b/07-project/Pipfile
@@ -6,7 +6,7 @@ name = "pypi"
 [packages]
 numpy = "*"
 pandas = "*"
-scikit-learn = "*"
+scikit-learn = "1.3.1"
 flask = "*"
 jupyter = "*"
 ipython = "*"
